M       cg_check_cov.m
M       html/vbm12.html

Added estimation of mean squared error to cg_check_cov.m

------------------------------------------------------------------------
r709 | gaser | 2015-08-21 11:48:45

M       CHANGES.txt
M       cg_check_cov.m

Don't use masking anymore in cg_check_cov.m.

------------------------------------------------------------------------
r710 | gaser | 2015-08-21 17:33:47

M       CHANGES.txt
M       cg_vbm_batch.m
M       cg_vbm_defaults.m
M       cg_vbm_extopts.m
M       cg_vbm_run_job.m
M       cg_vbm_write.m
M       html/vbm12.html
M       vbm_tst_qa.m
M       vbm_vol_partvol.m

(1) Replaced nanstd by vbm_stat_nanstd in vbm_tst_qa.m.
(2) Updated cg_vbm_batch.m for new default parameters.
(3) Many naming changes to outputs and help texts incg_vbm_write, 
    vbm_vol_partvol, cg_vbm_run_job.
(4) Removed error message if peaks are too different in cg_vbm_write.m.

------------------------------------------------------------------------
r711 | gaser | 2015-08-25 15:58:23

M       CHANGES.txt
M       cg_check_cov.m
M       html/vbm12.html

Added option to sort data according to mean correlation in cg_check_cov.m.

------------------------------------------------------------------------
r712 | gaser | 2015-08-27 16:09:38

M       CHANGES.txt
M       cg_check_cov.m
M       html/vbm12.html

Removed bug in cg_check_cov.m fpr MSE estimation for surfaces.

------------------------------------------------------------------------
r713 | gaser | 2015-09-07 08:49:29

M       CHANGES.txt
M       cg_slice_overlay.m
M       cg_slice_overlay_ui.m

(1) Extended cg_slice_overlay.m by option to automatically display slices 
    with local maxima if slice_str is empty string.
(2) Corrected bug in cg_slice_overlay.m for saving images of wrong window.
(3) Updated cg_slice_overlay_ui according to new functions in cg_slice_overlay.m
 
------------------------------------------------------------------------
r714 | gaser | 2015-09-07 08:54:19