@@ -130,10 +130,10 @@ function stools = cg_vbm_stools(expert)
 
   surfextract      = cfg_exbranch;
   surfextract.tag  = 'surfextract';
-  surfextract.name = 'Extract surface parameters';
+  surfextract.name = 'Extract additional surface parameters';
   surfextract.val  = {data_surf_extract,GI,FD,SD};
   surfextract.prog = @vbm_surf_parameters;
-  surfextract.help = {'Using this option several surface parameters can be extracted that can be further analyzed.'};
+  surfextract.help = {'Additional surface parameters can be extracted that can be used for statistical analysis.'};
 
 
 
@@ -385,19 +385,9 @@ function stools = cg_vbm_stools(expert)
   v2s.data_surf_sub_lh.num     = [1 Inf];
   v2s.data_surf_sub_lh.help    = {
     'Select left subject surface files.'
-    'Right side will processed automaticly.'
+    'Right side will automatically processed.'
     };
- 
-%   v2s.data_surf_sub_rh         = cfg_files;
-%   v2s.data_surf_sub_rh.tag     = 'data_mesh_rh';
-%   v2s.data_surf_sub_rh.name    = '(Right) Individual Surfaces';
-%   v2s.data_surf_sub_rh.filter  = 'gifti';
-%   v2s.data_surf_sub_rh.ufilter = '^rh.central.*';
-%   v2s.data_surf_sub_rh.num     = [0 Inf];
-%   v2s.data_surf_sub_rh.help    = {
-%     'Select right subject surface files.'
-%     };
-  
+   
   v2s.data_sub         = cfg_files; 
   v2s.data_sub.tag     = 'data_vol';
   v2s.data_sub.name    = 'Volumes';
@@ -405,23 +395,22 @@ function stools = cg_vbm_stools(expert)
   v2s.data_sub.ufilter = '^(?!wmr|wp|w0rp|wc).*'; % no normalized images
   v2s.data_sub.num     = [1 Inf];
   v2s.data_sub.help    = {
-    'Select subject space volumes.'
+    'Select volumes in native (subject) space.'
   };
 
   v2s.vol2surf      = cfg_exbranch;
   v2s.vol2surf.tag  = 'vol2surf';
-  v2s.vol2surf.name = 'Map Subjectspace Volumes to Individual Hemisheres';
+  v2s.vol2surf.name = 'Map Volume (Native Space) to Individual Surface';
   v2s.vol2surf.val = {
     v2s.data_sub ...
     v2s.data_surf_sub_lh ...
-    ... v2s.data_surf_sub_rh ...
     v2s.datafieldname ...
     v2s.interp ...
     v2s.mapping ...
     };
   v2s.vol2surf.prog = @vbm_surf_vol2surf;
   v2s.vol2surf.help = {
-    'Extract volumetric data from individual space.'
+    'Map volume (native space) to individual surface.'
     ''
   };
 
@@ -439,21 +428,9 @@ function stools = cg_vbm_stools(expert)
   v2s.data_surf_avg_lh.dir     = fullfile(spm('dir'),'toolbox','vbm12');
   v2s.data_surf_avg_lh.help    = {
     'Select left template surface file. '
-    'Right hemisphere will processed automaticly.'
+    'Right hemisphere will automatically processed.'
     };
-  
-%   v2s.data_surf_avg_rh         = cfg_files; 
-%   v2s.data_surf_avg_rh.tag     = 'data_mesh_rh';
-%   v2s.data_surf_avg_rh.name    = 'Right Template Hemisphere';
-%   v2s.data_surf_avg_rh.filter  = 'gifti';
-%   v2s.data_surf_avg_rh.ufilter = '^rh.*';
-%   v2s.data_surf_avg_rh.num     = [0 1];
-%   v2s.data_surf_avg_lh.val{1}  = {fullfile(spm('dir'),'toolbox','vbm12','templates_surfaces','lh.central.Template_T1_IXI555_MNI152.gii')};  
-%   v2s.data_surf_avg_rh.dir     = fullfile(spm('dir'),'toolbox','vbm12');
-%   v2s.data_surf_avg_rh.help    = {
-%     'Select right template surface file.'
-%     };
-  
+    
   v2s.data_norm         = cfg_files; 
   v2s.data_norm.tag     = 'data_vol';
   v2s.data_norm.name    = 'Volumes';
@@ -461,42 +438,40 @@ function stools = cg_vbm_stools(expert)
   v2s.data_norm.ufilter = '^(?=wm|wp|w0rp|wc).*'; % only normalized images
   v2s.data_norm.num     = [1 Inf];
   v2s.data_norm.help    = {
-    'Select templatespace volumes.'
+    'Select spatially normalized volumes (in template space).'
   };
 
   v2s.vol2tempsurf      = cfg_exbranch;
   v2s.vol2tempsurf.tag  = 'vol2surftemp';
-  v2s.vol2tempsurf.name = 'Map Templatespace Volumes to Template Hemispheres';
+  v2s.vol2tempsurf.name = 'Map Normalized Volume (Template Space) to Template Surface';
   v2s.vol2tempsurf.val  = {
     v2s.data_norm ...
     v2s.data_surf_avg_lh ...
-    ... v2s.data_surf_avg_rh ...
     v2s.datafieldname ...
     v2s.interp ...
     v2s.mapping ...
   };
   v2s.vol2tempsurf.prog = @vbm_surf_vol2surf;
   v2s.vol2tempsurf.help = {
-    'Extract volumetric data from template space.'
-    'The template surface was generated by VBM12 surface processing [1] of the average wmr*.nii images of VBM12.   '
+    'Map spatially normalized data (in template space) to template surface.'
+    'The template surface was generated by VBM12 surface processing [1] of the average of 550 Dartel-normalized images of the IXI database that were also used to create the IXI Dartel template.   '
     ''
     '  [1] Dahnke, R., Yotter, R. A., and Gaser, C. 2012.'
     '  Cortical thickness and central surface estimation.'
     '  Neuroimage, 65C:336?348.'
     ''
-    '  WARNING: ONLY FOR VISUAL PURPOSE! '
-    '           ALTHOUGH THERE IS A GOOD OVERLAPE TO THE TEMPLATE,'
-    '           THERE IS ONLY A SMALL OVERLAPE TO THE INDIVIDUAL ANATOMY!'
-    '           DO NOT USE THE RESULTS FOR FURTHER STATISTIC!'
+    '  WARNING: This function is primarily thought in order to project statistical results '
+    '           to the template surface. Do not use the output of this function'
+    '           for any statistical analysis. Statistical analysis should only use'
+    '           resampled data of individual volume data (in native space) that were mapped'
+    '           to individual surfaces.'
     ''
   };
 
 
-
-
 % surface calculations 
 % ----------------------------------------------------------------------
-% estimation per person (individual and group sampling):
+% estimation per subject (individual and group sampling):
 % g groups with i datafiles and i result datafile
  
   sc.cdata         = cfg_files;
@@ -521,7 +496,7 @@ function stools = cg_vbm_stools(expert)
   sc.cdata_sample.values  = {sc.cdata_sub};
   sc.cdata_sample.num     = [1 Inf];
   sc.cdata_sample.help = {...
-    'Specify data for each sample.  All samples must have the same size and same order.'};
+    'Specify data for each sample. All samples must have the same size and same order.'};
  
   sc.outdir         = cfg_files;
   sc.outdir.tag     = 'outdir';
@@ -611,7 +586,7 @@ function stools = cg_vbm_stools(expert)
 
   surfcalcsub      = cfg_exbranch;
   surfcalcsub.tag  = 'surfcalcsub';
-  surfcalcsub.name = 'Surface Calculator (subjectwise)';
+  surfcalcsub.name = 'Surface Calculator (subject-wise)';
   surfcalcsub.val  = {
     sc.cdata_sample ...
     sc.dataname ...
